@@ -37,7 +37,7 @@
 				[image]
 					x = 5
 					y = 0
-					w = "(width - 14)"
+					w = "(if(width < 14, 0, width - 14))"
 					stretch = "true"
 					name = "dialogs/translucent54-border-top.png"
 				[/image]
@@ -51,7 +51,7 @@
 				[image]
 					x = "(width - 9)"
 					y = 5
-					h = "(height - 14)"
+					h = "(if(height < 14, 0, height - 14))"
 					stretch = "true"
 					name = "dialogs/translucent54-border-right.png"
 				[/image]
@@ -65,7 +65,7 @@
 				[image]
 					x = 5
 					y = "(height - 9)"
-					w = "(width - 14)"
+					w = "(if(width < 14, 0, width - 14))"
 					stretch = "true"
 					name = "dialogs/translucent54-border-bottom.png"
 				[/image]
@@ -79,7 +79,7 @@
 				[image]
 					x = 0
 					y = 5
-					h = "(height - 14)"
+					h = "(if(height < 14, 0, height - 14))"
 					stretch = "true"
 					name = "dialogs/translucent54-border-left.png"
 				[/image]
@@ -87,8 +87,8 @@
 				[image]
 					x = 5
 					y = 5
-					w = "(width - 14)"
-					h = "(height - 14)"
+					w = "(if(width < 14, 0, width - 14))"
+					h = "(if(height < 14, 0, height - 14))"
 					name = "dialogs/translucent54-background.png"
 				[/image]
 
