@@ -27,7 +27,7 @@
 	[text]
 		x = {OFFSET}
 		y = {GUI__TEXT_VERTICALLY_CENTRED}
-		w = "(width - {OFFSET})"
+		w = "(if(width < {OFFSET}, 0, width - {OFFSET}))"
 		h =  "(text_height)"
 		font_size = {FONT_SIZE}
 		colour = {FONT_COLOUR}
