@@ -35,28 +35,28 @@
 	[image]
 		x = 10
 		y = 0 
-		w = "(width - 20)"
+		w = "(if(width < 20, 0, width - 20))"
 		name = "misc/selection2_transparent-border-top.png"
 	[/image]
 
 	[image]
 		x = 10
 		y = "(height - 3)"
-		w = "(width - 20)"
+		w = "(if(width < 20, 0, width - 20))"
 		name = "misc/selection2_transparent-border-bottom.png"
 	[/image]
 
 	[image]
 		x = 0
 		y = 10 
-		h= "(height - 20)"
+		h = "(if(height < 20, 0, height - 20))"
 		name = "misc/selection2_transparent-border-left.png"
 	[/image]
 
 	[image]
 		x = "(width - 3)"
 		y = 10 
-		h = "(height - 20)"
+		h = "(if(height < 20, 0, height - 20))"
 		name = "misc/selection2_transparent-border-right.png"
 	[/image]
 
@@ -64,8 +64,8 @@
 	[image]
 		x = 3
 		y = 3
-		w = "(width - 6)"
-		h = "(height - 6)"
+		w = "(if(width < 6, 0, width - 6))"
+		h = "(if(height < 6, 0, height - 6))"
 		name = "misc/selection2_transparent-background.png"
 	[/image]
 
