@@ -20,7 +20,8 @@
 		[image]
 			x = 0
 			y = {GROOVE_TOP}
-			h = "(height - {GROOVE_TOP} - {GROOVE_BOTTOM})"
+			h = "(if(height - {GROOVE_TOP} - {GROOVE_BOTTOM} < 0
+					, 0, height - {GROOVE_TOP} - {GROOVE_BOTTOM}))"
 			stretch = true
 			name = "buttons/scrollgroove{IMAGE_MIDDLE}-mid.png"
 		[/image]
@@ -46,7 +47,9 @@
 		[image]
 			x = 0
 			y = "(positioner_offset + {POSITIONER_TOP})"
-			h = "(positioner_length - {POSITIONER_TOP} - {POSITIONER_BOTTOM})"
+			h = "(
+if(positioner_length - {POSITIONER_TOP} - {POSITIONER_BOTTOM} < 0
+	, 0, positioner_length - {POSITIONER_TOP} - {POSITIONER_BOTTOM}))"
 			stretch = true
 			name = "buttons/scrollmid{IMAGE_MIDDLE}{IMAGE_SUFFIX}"
 		[/image]
