@@ -32,7 +32,7 @@
 				[image]
 					x = 5
 					y = 0
-					w = "(width - 14)"
+					w = "(if(width < 14, 0, width - 14))"
 					stretch = "true"
 					name = "dialogs/{BASE_NAME}-border-top.png"
 				[/image]
@@ -46,7 +46,7 @@
 				[image]
 					x = "(width - 9)"
 					y = 5
-					h = "(height - 14)"
+					h = "(if(height < 14, 0, height - 14))"
 					stretch = "true"
 					name = "dialogs/{BASE_NAME}-border-right.png"
 				[/image]
@@ -60,7 +60,7 @@
 				[image]
 					x = 5
 					y = "(height - 9)"
-					w = "(width - 14)"
+					w = "(if(width < 14, 0, width - 14))"
 					stretch = "true"
 					name = "dialogs/{BASE_NAME}-border-bottom.png"
 				[/image]
@@ -74,7 +74,7 @@
 				[image]
 					x = 0
 					y = 5
-					h = "(height - 14)"
+					h = "(if(height < 14, 0, height - 14))"
 					stretch = "true"
 					name = "dialogs/{BASE_NAME}-border-left.png"
 				[/image]
@@ -82,8 +82,8 @@
 				[image]
 					x = 5
 					y = 5
-					w = "(width - 14)"
-					h = "(height - 14)"
+					w = "(if(width < 14, 0, width - 14))"
+					h = "(if(height < 14, 0, height - 14))"
 					name = "dialogs/{BASE_NAME}-background.png"
 				[/image]
 
